--- a/templates/expenses/get_stats_view.html
+++ b/templates/expenses/get_stats_view.html
@@ -134,13 +134,13 @@
 					// add the cells that contain the properties of the expenses
 					let cell = row.insertCell(j);
 					if(expense_property == 'fund'){
-						cell.innerHTML = fund_names[expense_property_value];
+						cell.textContent = fund_names[expense_property_value];
 					}else if(expense_property == 'category'){
-						cell.innerHTML = category_names[expense_property_value];
+						cell.textContent = category_names[expense_property_value];
 					}else if(expense_property == 'timestamp'){
-						cell.innerHTML = convertDate(expense_property_value.slice(5,10));
+						cell.textContent = convertDate(expense_property_value.slice(5,10));
 					}else{
-						cell.innerHTML = expense_property_value
+						cell.textContent = expense_property_value
 					}
 				});
 			});
